fix main container width on mobile displays

--- a/static/styles.css
+++ b/static/styles.css
@@ -173,6 +173,10 @@ body {
   .project-card:nth-child(even) {
     transform: translateY(0);
   }
+
+  .main-container, .projects-main-container {
+    width: 90%;
+  }
 }
 
 @keyframes slideOut {
